--- a/AVONmo/Views/Home/Index.cshtml
+++ b/AVONmo/Views/Home/Index.cshtml
@@ -2,7 +2,6 @@
     body {
         font-family: Castellar, sans-serif;
         margin: 20px;
-        background-color: #a3e4d7
     }
 
     .categoria {
@@ -23,7 +22,7 @@
 </div>
 
 <div class="categoria">
-    <h2><a href="CREMAS.html">CREMAS</a></h2>
+    <h2><a asp-controller="Home" asp-action="Cremas">CREMAS</a></h2>
     <p>CONOCE LAS NUEVAS CREMAS HIDRATANTES HECHAS A TU MEDIDA</p>
 </div>
 
