Crecion de vistas y actualizar el layout

--- a/AVONmo/Views/Home/Electrodomesticos.cshtml
+++ b/AVONmo/Views/Home/Electrodomesticos.cshtml
@@ -1,14 +1,14 @@
 ﻿<style type="text/css">
-        tr:nth-child(even) {
-            background-color: white;
-        }
+    tr:nth-child(even) {
+        background-color: white;
+    }
 
-        tr:nth-child(odd) {
-            background-color: #808080;
-        }
+    tr:nth-child(odd) {
+        background-color: #808080;
+    }
 </style>
 @{
-    ViewData["Title"] = "Cremas";
+    ViewData["Title"] = "Electrodomesticos";
 }
 <div class="main-panel">
     <div class="container">
@@ -21,7 +21,7 @@
             <div class="col-md-8 grid-margin stretch-card">
                 <div class="card">
                     <div class="card-body">
-                        <p class="card-title font-weight-bold text-center">CREMAS</p>
+                        <p class="card-title font-weight-bold text-center">PERFUMES</p>
                         <hr>
 
 
@@ -37,9 +37,14 @@
                             </tr>
 
                         </table>
+
+
+
+
                     </div>
                 </div>
             </div>
+
         </div>
 
         <div class="menuContainerf"> </div>
