--- a/AVONmo/Views/Home/Index.cshtml
+++ b/AVONmo/Views/Home/Index.cshtml
@@ -1,9 +1,5 @@
 ﻿<style>
-    body {
-        font-family: Castellar, sans-serif;
-        margin: 20px;
-    }
-
+ 
     .categoria {
         border: 1px solid #294;
         padding: 10px;
@@ -17,7 +13,7 @@
 
 
 <div class="categoria">
-    <h2><a href="PERFUMES.html">PERFUMES</a></h2>
+    <h2><a asp-controller="Home" asp-action="Perfumes">PERFUMES</a></h2>
     <p>ENCUENTRA LOS NUEVOS OLORES DE TEMPORADA </p>
 </div>
 
@@ -27,15 +23,15 @@
 </div>
 
 <div class="categoria">
-    <h2><a href="ELECTRODOMESTICOS.html">ELECTRODOMESTICOS</a></h2>
+    <h2><a asp-controller="Home" asp-action="Electrodomesticos">ELECTRODOMESTICOS</a></h2>
     <p>¿QUIERES DARTE UN GUSTITO?</p>
 </div>
 <div class="categoria">
-    <h2><a href="MAQUILLAJE.html">MAQUILLAJE</a></h2>
+    <h2><a asp-controller="Home" asp-action="Maquillaje">MAQUILLAJE</a></h2>
     <p>UN REGALO PARA MAMÁ</p>
 </div>
 <div class="categoria">
-    <h2><a href="TUPPERS.html">TUPPERS</a></h2>
+    <h2><a asp-controller="Home" asp-action="Tuppers">TUPPERS</a></h2>
     <p>¿AGREGARAS MAS TUPPERS A TU COLECCION?</p>
 </div>
 
