--- a/AVONmo/wwwroot/css/site.css
+++ b/AVONmo/wwwroot/css/site.css
@@ -19,5 +19,24 @@ html {
 
 body {
     margin-bottom: 60px;
-    background-color: #a3e4d7
+    background-color: #a3e4d7;
+    font-family: Castellar, sans-serif;
+    margin: 20px;
+}
+
+table {
+    border: 1px solid black;
+    border-collapse: collapse;
+    padding: 0px;
+}
+
+th {
+    padding: 10px;
+    border: 1px solid black;
+}
+
+td {
+    padding: 10px;
+    border: 1px solid black;
+    text-align: left;
 }
