Agregando entity para ver las cremas

--- a/AVONmo/Views/Shared/_Layout.cshtml
+++ b/AVONmo/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
     </header>
     <div class="container">
         <main role="main" class="pb-3">
-            <h1><center>AVON mo</center></h1>
+            <h1 class="text-center">AVON mo</h1>
             <p><center>LA MARCA NUMERO UNO EN PREOCUPARSE POR SUS CLIENTES </center></p>
             @RenderBody()
         </main>
