--- a/AVONmo/Views/Home/Index.cshtml
+++ b/AVONmo/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿<style>
+﻿@model List<Categorium>
+<style>
  
     .categoria {
         border: 1px solid #294;
@@ -12,26 +13,11 @@
 
 
 
-<div class="categoria">
-    <h2><a asp-controller="Home" asp-action="Perfumes">PERFUMES</a></h2>
-    <p>ENCUENTRA LOS NUEVOS OLORES DE TEMPORADA </p>
-</div>
-
-<div class="categoria">
-    <h2><a asp-controller="Home" asp-action="Cremas">CREMAS</a></h2>
-    <p>CONOCE LAS NUEVAS CREMAS HIDRATANTES HECHAS A TU MEDIDA</p>
-</div>
-
-<div class="categoria">
-    <h2><a asp-controller="Home" asp-action="Electrodomesticos">ELECTRODOMESTICOS</a></h2>
-    <p>¿QUIERES DARTE UN GUSTITO?</p>
-</div>
-<div class="categoria">
-    <h2><a asp-controller="Home" asp-action="Maquillaje">MAQUILLAJE</a></h2>
-    <p>UN REGALO PARA MAMÁ</p>
-</div>
-<div class="categoria">
-    <h2><a asp-controller="Home" asp-action="Tuppers">TUPPERS</a></h2>
-    <p>¿AGREGARAS MAS TUPPERS A TU COLECCION?</p>
-</div>
+@foreach (var categoria in Model)
+{
+    <div class="categoria">
+        <h2><a asp-controller="Home" asp-action="@categoria.Titulo">@categoria.Titulo</a></h2>
+        <p>@categoria.Descripcion</p>
+    </div>
+}
 
