--- a/AVONmo/Views/Home/Cremas.cshtml
+++ b/AVONmo/Views/Home/Cremas.cshtml
@@ -6,6 +6,7 @@
 <div class="card">
     <div class="card-body">
         <h2 class="card-title font-weight-bold text-center">@ViewData["Title"]</h2>
+        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="CrearCrema">Nuevo Producto</a>
         <hr>
 
 
