--- a/AVONmo/Views/Home/CrearCrema.cshtml
+++ b/AVONmo/Views/Home/CrearCrema.cshtml
@@ -1,14 +1,25 @@
-﻿@{
+﻿@model AVONmo.Models.Crema
+@{
     ViewData["Title"] = "Producto Nuevo";
 }
 <h1>Pagina de Creacion de nuevo producto</h1>
 <form asp-action="CrearCrema" method="post">
-    
-    Categoria: <input  value="C-000" disabled class="form-control" />
+
+    Categoria: <input asp-for=IdCategoria value="Cremas" disabled class="form-control" />
     <br />
-    Nombre Producto <input value=""  required class="form-control" />
+    @if (ViewBag.Mensaje != null)
+    {
+        <div class="alert alert-danger" role="alert">
+            @ViewBag.Mensaje
+
+        </div>
+    }
+    Ultimo ID Producto "Agregue el numero que sigue"<input asp-for=IdProducto class="form-control" />
     <br />
-    Precio <input name="Precio" type="password" value="" required class="form-control" />
+    Nombre Producto <input asp-for=Descripcion value="" required class="form-control" />
+    <br />
+    Precio <input type="number" step="0.01" name="Precio" required class="form-control" />
     <br />
     <button type="submit" class="btn-danger" id="btn">AGREGAR</button>
 </form>
+<br />
