Update Crear perfume y actualizacion de estilo

--- a/AVONmo/Views/Home/CrearPerfume.cshtml
+++ b/AVONmo/Views/Home/CrearPerfume.cshtml
@@ -1,11 +1,11 @@
-﻿@model AVONmo.Models.Crema
+﻿@model AVONmo.Models.Perfume
 @{
-    ViewData["Title"] = "Nueva Crema";
+    ViewData["Title"] = "Nuevo Perfume";
 }
 <h1>Pagina de Creacion de nuevo producto</h1>
 <form asp-action="CrearCrema" method="post">
 
-    Categoria: <input asp-for=IdCategoria value="Cremas" disabled class="form-control" />
+    Categoria: <input asp-for=IdCategoria value="Perfume" disabled class="form-control" />
     <br />
     @if (ViewBag.Mensaje != null)
     {
