--- a/AVONmo/Views/Home/Perfumes.cshtml
+++ b/AVONmo/Views/Home/Perfumes.cshtml
@@ -6,6 +6,7 @@
     <div class="card">
         <div class="card-body">
             <h2 class="card-title font-weight-bold text-center">@ViewData["Title"]</h2>
+            <a class="btn btn-outline-dark" asp-area="" asp-controller="Home" asp-action="CrearPerfume"><img src="/plus.svg" alt="Icono de agregar" />Nuevo Producto</a>
             <hr>
 
 
