--- a/AVONmo/Views/Home/Cremas.cshtml
+++ b/AVONmo/Views/Home/Cremas.cshtml
@@ -6,7 +6,7 @@
 <div class="card">
     <div class="card-body">
         <h2 class="card-title font-weight-bold text-center">@ViewData["Title"]</h2>
-        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="CrearCrema">Nuevo Producto</a>
+        <a class="btn btn-outline-dark" asp-area="" asp-controller="Home" asp-action="CrearCrema"><img src="/plus.svg" alt="Icono de agregar" />Nuevo Producto</a>
         <hr>
 
 
