--- a/AVONmo/Views/Shared/_Layout.cshtml
+++ b/AVONmo/Views/Shared/_Layout.cshtml
@@ -26,6 +26,7 @@
                 </div>
             </div>
         </nav>
+       
     </header>
     <div class="container">
         <main role="main" class="pb-3">
@@ -34,10 +35,11 @@
             @RenderBody()
         </main>
     </div>
-
+    <br />
     <footer class="border-top footer text-muted">
-        <div class="container">
+        <div class="container position-relative">
             &copy; 2024 - AVONmo 
+            <a class="position-absolute bottom-0 end-0 m-sm-auto" href="https://github.com/Supertepo/AVONmo"><img style="width: 2.5rem; margin-right: 2.5rem;" src="/github-mark.svg" alt="Github logo" /></a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
