Update para que muestre y oculte los botones de actualizar y de eliminar

--- a/AVONmo/Views/Home/Cremas.cshtml
+++ b/AVONmo/Views/Home/Cremas.cshtml
@@ -46,7 +46,13 @@
     function mostrarBotones() {
         var elementos = document.getElementsByName('Actualizar');
         for (var i = 0; i < elementos.length; i++) {
-            elementos[i].style.display = 'table-cell';
+            // Comprobar si el elemento ya está visible
+            if (elementos[i].style.display === 'none' || elementos[i].style.display === '') {
+                elementos[i].style.display = 'table-cell'; // Mostrar si está oculto
+            } else {
+                elementos[i].style.display = 'none'; // Ocultar si está visible
+            }
         }
     }
+
 </script>
