agregando update y delete de electrodomestico y de perfume

--- a/AVONmo/Views/Home/ActualizacionCompleta.cshtml
+++ b/AVONmo/Views/Home/ActualizacionCompleta.cshtml
@@ -6,5 +6,6 @@
 <h1 class="text-center">completada</h1>
 <h1 class="text-center">con</h1>
 <h1 class="text-center">éxito</h1>
+<h2 class="text-center">Por favor Regresar a Home</h2>
 
 
