--- a/AVONmo/Views/Home/CrearMaquillaje.cshtml
+++ b/AVONmo/Views/Home/CrearMaquillaje.cshtml
@@ -3,9 +3,9 @@
     ViewData["Title"] = "Nuevo Maquillaje";
 }
 <h1>Pagina de Creacion de nuevo producto</h1>
-<form asp-action="CrearCrema" method="post">
+<form asp-action="CrearMaquillaje" method="post">
 
-    Categoria: <input asp-for=IdCategoria value="Maquillaje" disabled class="form-control" />
+    <input asp-for=IdCategoria value="Maquillaje" type="hidden" class="form-control" />
     <br />
     @if (ViewBag.Mensaje != null)
     {
