--- a/AVONmo/Views/Home/CrearPerfume.cshtml
+++ b/AVONmo/Views/Home/CrearPerfume.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Nuevo Perfume";
 }
 <h1>Pagina de Creacion de nuevo producto</h1>
-<form asp-action="CrearCrema" method="post">
+<form asp-action="CrearPerfume" method="post">
 
     Categoria: <input asp-for=IdCategoria value="Perfume" disabled class="form-control" />
     <br />
