--- a/AVONmo/Views/Home/CrearTupper.cshtml
+++ b/AVONmo/Views/Home/CrearTupper.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Nuevo Tupper";
 }
 <h1>Pagina de Creacion de nuevo producto</h1>
-<form asp-action="CrearCrema" method="post">
+<form asp-action="CrearTupper" method="post">
 
     Categoria: <input asp-for=IdCategoria value="Tupper" disabled class="form-control" />
     <br />
