--- a/AVONmo/Views/Home/Maquillaje.cshtml
+++ b/AVONmo/Views/Home/Maquillaje.cshtml
@@ -15,6 +15,7 @@
 
     <thead class="table-dark">
         <tr>
+            <td name="Actualizar">ACTUALIZAR/ELIMINAR</td>
             <th class="text-center" width="20%">CATEGORIA</th>
             <th class="text-center" width="16%">ID</th>
             <th class="text-center" width="16%">NOMBRE</th>
