--- a/AVONmo/Views/Home/Index.cshtml
+++ b/AVONmo/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
-﻿@model List<Categorium>
+﻿@model Tuple<List<Categorium>,List<Menu>>
 <style>
- 
+
     .categoria {
         border: 1px solid #294;
         padding: 10px;
@@ -13,11 +13,13 @@
 
 
 
-@foreach (var categoria in Model)
+@for (int i = 0; i < Model.Item1.Count; i++)
 {
     <div class="categoria shadow-lg">
-        <h2><a asp-controller="Home" asp-action="@categoria.Titulo">@categoria.Titulo</a></h2>
-        <p>@categoria.Descripcion</p>
+        <h2><a asp-controller="Home" asp-action="@Model.Item1[i].">@Model.Item1[i].Titulo</a></h2>
+        <div>
+        <p>@Model.Item1[i].Descripcion</p>
+        </div>
     </div>
 }
 
