--- a/AVONmo/Views/Home/Index.cshtml
+++ b/AVONmo/Views/Home/Index.cshtml
@@ -16,7 +16,7 @@
 @for (int i = 0; i < Model.Item1.Count; i++)
 {
     <div class="categoria shadow-lg">
-        <h2><a asp-controller="Home" asp-action="@Model.Item1[i].">@Model.Item1[i].Titulo</a></h2>
+        <h2><a asp-controller="Home" asp-action="@Model.Item1[i].Titulo">@Model.Item1[i].Titulo</a></h2>
         <div>
         <p>@Model.Item1[i].Descripcion</p>
         </div>
